@@ -1,7 +1,17 @@
-qsmr:
+interactive:
+    image: docker2.molflow.com/odin_redo/qsmr:latest
+    working_dir: /src
+    volumes:
+    - ~/QsmrAbsLookups:/QsmrAbsLookups
+    - ~/:/myhome
+    - ./:/src
+    command: /opt/matlab/bin/matlab -nojvm -nodisplay -nosplash -r "run('Mscripts_qsystem/q2_init.m');"
+
+inv_demo:
     image: docker2.molflow.com/odin_redo/qsmr:latest
     working_dir: /src
     volumes:
     - /home/patrick/Outdata2/QsmrAbsLookups:/home/patrick/Outdata2/QsmrAbsLookups
     - ./:/src
     command: /opt/matlab/bin/matlab -nojvm -nodisplay -nosplash -r "run('Mscripts_qsystem/q2_init.m'); LOG = get_scan_log('http://malachite.rss.chalmers.se/rest_api/v4/freqmode_info/2015-04-01/AC2/1/'); L1B = get_scan_l1b_data(LOG.Info(1).URLS.URL_spectra); [L2,L2I] = q2_inv( LOG.Info(1), L1B, q_std(1)); quit;"
+
